src/PathComplete/style.scss
.ant-select-dropdown {
  text-align: left;
}

.ant-select-auto-complete {
  font-size: 4ex ! important;
  margin: auto;
  width: 75%;

  input {
    height: auto ! important;
  }

  .ant-select-selection__placeholder {
    height: auto;
    line-height: 100%;
    margin-top: 0ex;
  }
}

.mimis-path {
  li {
    display: inline-block;
  }
}

